testdata/invalid/invalid_const_unassignable_uint.bop
const uint32 a = "hello world";